main: pre-image version
