# docs/swagger.json
@@ -88,7 +88,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AnswersSwaggerRequestPostBody"
+                            "$ref": "#/definitions/models.AnswersSwaggerRequestBody"
                         }
                     }
                 ],
@@ -181,7 +181,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AnswersSwaggerRequestPutBody"
+                            "$ref": "#/definitions/models.AnswersSwaggerRequestBody"
                         }
                     }
                 ],
@@ -208,7 +208,7 @@
                 }
             }
         },
-        "/answers/{id}/delete-by-tutor/{delete-by}": {
+        "/answers/{id}/deleteBy/{tutor_id}": {
             "delete": {
                 "description": "Delete answer by ID and mark all answer versions as deleted with tutor who performed deletion",
                 "tags": [
@@ -226,7 +226,7 @@
                     {
                         "type": "integer",
                         "description": "Tutor ID who deleted the answer",
-                        "name": "delete-by",
+                        "name": "tutor_id",
                         "in": "path",
                         "required": true
                     }
@@ -467,7 +467,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.QuestionsSwaggerRequestPostBody"
+                            "$ref": "#/definitions/models.QuestionsSwaggerRequestBody"
                         }
                     }
                 ],
@@ -560,7 +560,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.QuestionsSwaggerRequestPutBody"
+                            "$ref": "#/definitions/models.QuestionsSwaggerRequestBody"
                         }
                     }
                 ],
@@ -587,7 +587,7 @@
                 }
             }
         },
-        "/questions/{id}/delete-by-tutor/{delete-by}": {
+        "/questions/{id}/deleteBy/{tutor_id}": {
             "delete": {
                 "description": "Delete question by ID and mark versions as deleted",
                 "tags": [
@@ -605,7 +605,7 @@
                     {
                         "type": "integer",
                         "description": "Tutor ID who deleted the question",
-                        "name": "delete-by",
+                        "name": "tutor_id",
                         "in": "path",
                         "required": true
                     }
@@ -1103,28 +1103,11 @@
                 }
             }
         },
-        "models.AnswersSwaggerRequestPostBody": {
+        "models.AnswersSwaggerRequestBody": {
             "type": "object",
             "properties": {
                 "answer_text": {
                     "type": "string"
-                },
-                "question_id": {
-                    "type": "integer"
-                },
-                "tutor_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.AnswersSwaggerRequestPutBody": {
-            "type": "object",
-            "properties": {
-                "answer_text": {
-                    "type": "string"
-                },
-                "is_edit": {
-                    "type": "boolean"
                 },
                 "question_id": {
                     "type": "integer"
@@ -1194,23 +1177,9 @@
                 }
             }
         },
-        "models.QuestionsSwaggerRequestPostBody": {
+        "models.QuestionsSwaggerRequestBody": {
             "type": "object",
             "properties": {
-                "question_text": {
-                    "type": "string"
-                },
-                "tutor_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.QuestionsSwaggerRequestPutBody": {
-            "type": "object",
-            "properties": {
-                "is_edit": {
-                    "type": "boolean"
-                },
                 "question_text": {
                     "type": "string"
                 },
